# agent-authz-eval

./: .env.example  .gitattributes  Makefile  README.md  pyproject.toml
docs/: LIMITATIONS.md  METHODOLOGY.md  THREAT_MODEL.md
results/: findings.json  launch_probe_anthropic_summary.csv  launch_probe_anthropic_transcripts.md  launch_probe_openai_transcripts.md  launch_probe_openrouter_transcripts.md  openrouter_provenance_capture.txt  pilot_transcripts.md  s2_consolidated.csv  s2_full_matrix_anthropic_authz_policy_t0_7_n5_summary.csv  s2_full_matrix_anthropic_authz_policy_t0_7_n5_transcripts.md  s2_full_matrix_anthropic_authz_policy_with_injection_guard_t0_7_n5_summary.csv  s2_full_matrix_anthropic_authz_policy_with_injection_guard_t0_7_n5_transcripts.md  s2_full_matrix_anthropic_context_only_t0_7_n5_summary.csv  s2_full_matrix_anthropic_context_only_t0_7_n5_transcripts.md  s2_full_matrix_groq_context_only_t0_7_n5_summary.csv  s2_full_matrix_groq_context_only_t0_7_n5_transcripts.md  s2_full_matrix_groq_probe_t0_7_n1_summary.csv  s2_full_matrix_groq_probe_t0_7_n1_transcripts.md  s2_full_matrix_openai_authz_policy_t0_7_n5_summary.csv  s2_full_matrix_openai_authz_policy_t0_7_n5_transcripts.md  s2_full_matrix_openai_authz_policy_with_injection_guard_t0_7_n5_summary.csv  s2_full_matrix_openai_authz_policy_with_injection_guard_t0_7_n5_transcripts.md  s2_full_matrix_openai_context_only_t0_7_n5_summary.csv  s2_full_matrix_openai_context_only_t0_7_n5_transcripts.md  s2_full_matrix_openrouter_authz_policy_t0_7_n5_summary.csv  s2_full_matrix_smoke_decision.md  (+24 more)
(+60 files in other folders)
