[project]
name = "agent-authz-eval"
version = "0.1.0"
description = "Synthetic least-privilege evaluation for tool-using LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kelechi Michael Uba" }]
dependencies = [
  "matplotlib==3.11.0",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
